# Nes-emu

./: CMakeLists.txt
data/roms/: test.asm
data/shaders/: color.frag  color.vert  truetype_render.frag  truetype_render.vert
src/: debugger.c  debugger.h  main.c  nes_cartridge.h  nes_cpu.c  nes_cpu.h  nes_ppu.h
